--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     -->
    
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
-    <title>BURGER BUILDER </title>
+    <title>CONNECT </title>
   </head>
   <body>
     <noscript>
